--- a/view/frontend/web/template/payment/wegetfinancing-checkout.html
+++ b/view/frontend/web/template/payment/wegetfinancing-checkout.html
@@ -9,7 +9,7 @@
                 visible: isRadioButtonVisible()" />
         <label data-bind="attr: {'for': getCode()}" class="label">
 
-            <img data-bind="attr: {src: getPaymentCardSrc(), alt: $t('WeGetFinancing Checkout')}"
+            <img data-bind="attr: {src: getPaymentIconUrl(), alt: $t('WeGetFinancing Checkout')}"
                  class="payment-icon"/>
 
             <span data-bind="text: getTitle()"></span>
