GET-1701 | feat(postback): fix new checkout icon

--- a/view/frontend/web/template/payment/wegetfinancing-checkout.html
+++ b/view/frontend/web/template/payment/wegetfinancing-checkout.html
@@ -10,6 +10,7 @@
         <label data-bind="attr: {'for': getCode()}" class="label">
 
             <img data-bind="attr: {src: getPaymentIconUrl(), alt: $t('WeGetFinancing Checkout')}"
+                 style="height: 50px;"
                  class="payment-icon"/>
 
             <span data-bind="text: getTitle()"></span>
