GET-2400 | fix(validator): merchant token empty validator refactoring

--- a/view/adminhtml/layout/adminhtml_system_config_edit.xml
+++ b/view/adminhtml/layout/adminhtml_system_config_edit.xml
@@ -4,5 +4,6 @@
     <head>
         <link src="WeGetFinancing_Checkout::js/validator-merchant-token-empty.js"/>
         <link src="WeGetFinancing_Checkout::js/validator-merchant-token-error.js"/>
+        <link src="WeGetFinancing_Checkout::js/validator-merchant-token-not-set.js"/>
     </head>
 </page>
